package bank.strategy;

public interface AccountStrategy {
    public double addInterest(double balance);
}
