@startuml

title Classes - Class Diagram



class AccountDAO
class AccountService
class Application

class Customer
class AccountEntry
class Account {





    AccountType getAccountType();

    void setAccountType(AccountType accountType);

    AccountStrategy getAccountStrategy();

    void setAccountStrategy(AccountStrategy accountStrategy);

    long getAccountnumber();

    void setAccountnumber(long accountnumber);

    double getBalance();

    void deposit(double amount);

    void withdraw(double amount);

    void transferFunds(Account toAccount, double amount, String description);

    Customer getCustomer();

    void setCustomer(Customer customer);

    Collection<AccountEntry> getEntryList();

    void addInterest();




}

 interface AccountStrategy {
    public double addInterest(double balance);
}
AccountStrategy <|-- AccountCheckingStrategyImpl
AccountStrategy <|-- AccountSavingStrategyImpl

AccountCheckingStrategyImpl <|-- AccountService
AccountSavingStrategyImpl <|-- AccountService


AccountDAO <|-- AccountService
Account <- AccountService
AccountStrategy <- Account
Customer <- Account
AccountEntry <- Account




AccountService <- Application



@enduml